# kopf

./: .ccls  .clang-format  .gitignore  CMakeLists.txt  Makefile  Makefile.old  README.md  ast.dot  common.mk  common.mk.old
examples/: consts.kopf  main.kopf
include/: ast.h  datatypes.h  io.h  lexer.h  parser.h  pch.h  pch.h.gch  token.h
include/debug/: color.h  logger.h  timer.h
include/visitors/: bytecode.h
include/vm/: op.h  stack.h  table.h  value.h  vm.h
src/: ast.c  io.c  lexer.c  main.c  parser.c  token.c
src/debug/: logger.c  timer.c
src/visitors/: bytecode.c
src/vm/: op.c  stack.c  table.c  value.c  vm.c
